add_library(RuntimeCommonCharacter
            CAssetFactory.hpp CAssetFactory.cpp
            CCharacterFactory.hpp CCharacterFactory.cpp
            CAnimData.hpp CAnimData.cpp
            CCharAnimTime.hpp CCharAnimTime.cpp
            IMetaAnim.hpp
            IMetaTrans.hpp
            CAnimationDatabase.hpp
            CAnimationDatabaseGame.hpp
            CTransitionDatabase.hpp
            CTransitionDatabaseGame.hpp
            CHierarchyPoseBuilder.hpp CHierarchyPoseBuilder.cpp
            CPoseAsTransforms.hpp CPoseAsTransforms.cpp
            CVirtualBone.hpp CVirtualBone.cpp
            CCharLayoutInfo.hpp CCharLayoutInfo.cpp
            CSegIdList.hpp CSegIdList.cpp
            CSegId.hpp CSegId.cpp
            CSkinRules.hpp CSkinRules.cpp
            CAnimCharacterSet.hpp CAnimCharacterSet.cpp
            CAnimationSet.hpp CAnimationSet.cpp
            CCharacterSet.hpp CCharacterSet.cpp
            CCharacterInfo.hpp CCharacterInfo.cpp
            CPASDatabase.hpp CPASDatabase.cpp
            CPASAnimState.hpp CPASAnimState.cpp
            CPASParmInfo.hpp CPASParmInfo.cpp
            CPASAnimInfo.hpp CPASAnimInfo.cpp
            CPASAnimParm.hpp CPASAnimParm.cpp
            CBodyState.hpp)
