add_library(RuntimeCommonCollision
            CGameCollision.hpp CGameCollision.cpp
            CCollisionInfo.hpp CCollisionInfo.cpp
            CCollidableOBBTree.hpp CCollidableOBBTree.cpp
            CCollidableOBBTreeGroup.hpp CCollidableOBBTreeGroup.cpp
            CMaterialList.hpp
            CMaterialFilter.hpp
            CRayCastResult.hpp CRayCastResult.cpp)
